stateDiagram-v2
    [*] --> Open : BufferedInputStream BufferedInputStream([InputStream in])
    [*] --> Open : BufferedInputStream BufferedInputStream([InputStream in], [int size])

    Open --> Open : int read()
    Open --> Open : int read([byte[] b], [int off], [int len])
    Open --> Open : long skip([long n])
    Open --> Open : int available()
    Open --> Open : boolean markSupported()
    Open --> MarkedOpen : void mark([int readlimit])

    MarkedOpen --> MarkedOpen : int read()
    MarkedOpen --> MarkedOpen : int read([byte[] b], [int off], [int len])
    MarkedOpen --> MarkedOpen : long skip([long n])
    MarkedOpen --> MarkedOpen : int available()
    MarkedOpen --> MarkedOpen : boolean markSupported()
    MarkedOpen --> MarkedOpen : void mark([int readlimit])
    MarkedOpen --> MarkedOpen : void reset()

    Open --> Closed : void close()
    MarkedOpen --> Closed : void close()
    Closed --> Closed : void close()

    Closed --> [*]

    note right of Open
        No mark set. reset() is forbidden.
        read, skip, available, mark are valid.
    end note

    note right of MarkedOpen
        mark() has been called. reset() is valid.
        mark() can be called again (updates mark position).
    end note

    note right of Closed
        Terminal state. close() is idempotent.
        read(), skip(), available(), reset() throw IOException.
    end note
